doc(Design Tokens): Ajustes

--- a/docs/designtokens/design-tokens-typo.mdx
+++ b/docs/designtokens/design-tokens-typo.mdx
@@ -4,15 +4,13 @@ sidebar_label: Typography
 sidebar_position: 3
 ---
 
-
-# Tipography
+# Typography
 
 :::note **Legenda**
 
 - **global** = token básico, comum à todos
 - **brand** = específico de cada marca, disponível de acordo com a necessidade
-:::
-
+  :::
 
 ## Font family
 
@@ -22,11 +20,10 @@ sidebar_position: 3
 | `font-family-text`    | brand     | Textos em geral, labels, placeholders, legendas, etc |
 | `font-family-code`    | brand     | Trechos de código em documentação técnica            |
 
-
 ## Font size
 
 | Token               | Valor (rem) | Valor (pixel) | Camada DS | Descrição      |
-| ------------------- | ----------- | ------------- | --------- | ---------------|
+| ------------------- | ----------- | ------------- | --------- | -------------- |
 | `font-size-xs`      | 0.75        | 12px          | global    |                |
 | `font-size-sm`      | 0.875       | 14px          | global    |                |
 | `font-size-default` | 1           | 16px          | global    | Base da escala |
@@ -38,7 +35,6 @@ sidebar_position: 3
 | `font-size-4xl`     | 3.75        | 60px          | brand     |                |
 | `font-size-5xl`     | 4.75        | 76px          | brand     |                |
 | `font-size-6xl`     | 6           | 96px          | brand     |                |
-
 
 ## Font-weight
 
@@ -57,7 +53,7 @@ sidebar_position: 3
 ## Line-height
 
 | Token              | Valor (%) | Referência (em) |
-|--------------------|-----------|-----------------|
+| ------------------ | --------- | --------------- |
 | `line-height-auto` | auto      |                 |
 | `line-height-none` | 100%      | 1.0             |
 | `line-height-3xs ` | 110%      | 1.1             |
