--- a/docs/about/team.mdx
+++ b/docs/about/team.mdx
@@ -26,7 +26,7 @@ import profileFran from './img/team/fran.jpeg';
 
 # Time do Animalia Design System
 
-/_ Incluir texto de introducao _/
+O time do Animalia é multidisciplinar e o processo colaborativo, buscando manter equilibrados os pilares de design, desenvolvimento e negócios.
 
 <div style={{ display: 'flex', flexFlow: 'row wrap', margin: '-8px' }}>
   <ProfileCardComponent
@@ -77,7 +77,7 @@ import profileFran from './img/team/fran.jpeg';
 
 ## Colaboração
 
-Pessoas que contibruiram ao longo da jornada da criação do designer system e que fazem parte desta construção.
+Pessoas que contribuíram ao longo da jornada da criação do Animalia Design System e que fazem parte dessa construção.
 
 <div
   style={{
