fix(icones): correção texto

--- a/docs/foundation/icon.mdx
+++ b/docs/foundation/icon.mdx
@@ -8,12 +8,13 @@ import LiveDemoFigma from './helpers/components/live-demo-figma.tsx';
 # Ícones
 
 :::note
-As definições de uso e boas práticas estão no componente [Icon](/docs/components/icon)
+As definições de uso e boas práticas dos ícones estão no componente [Icon](/docs/components/icon)
 :::
 
-Os ícones do Animalia Design System pode ser encotrados na [Comunidade do Figma](https://www.figma.com/community/file/1114553683999354347).
+A biblioteca de ícones do Animalia Design System pode ser encontrada na [Comunidade do Figma](https://www.figma.com/community/file/1114553683999354347).
 
 <LiveDemoFigma react="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fty9BsTB5hceY5CrrdxMLcW%2FAnimalia-DS-%257C-Icons%3Fnode-id%3D0%253A1" />
+
 
 ## Como utilizar
 
