--- a/docs/about/team.mdx
+++ b/docs/about/team.mdx
@@ -5,8 +5,6 @@ sidebar_position: 4
 ---
 
 import ProfileCardComponent from './helpers/components/profile-card.tsx';
-
-import profileTest from './img/team/profile.png';
 import profileNic from './img/team/nic.jpeg';
 import profileDoug from './img/team/doug.jpeg';
 import profileAmilcar from './img/team/amilcar.jpeg';
@@ -17,12 +15,24 @@ import profileJe from './img/team/jeh.jpeg';
 import profileGabi from './img/team/gabi.jpeg';
 import profileRafa from './img/team/rafa.jpeg';
 import profileLuiz from './img/team/luiz-mariz.jpeg';
+import profileJorge from './img/team/jorge.png';
 
 import profilePeixe from './img/team/peixe.jpeg';
 import profileTais from './img/team/tais.jpeg';
 import profileMay from './img/team/may.jpeg';
 import profileVinicius from './img/team/vinicius.jpeg';
 import profileFran from './img/team/fran.jpeg';
+import profileCamis from './img/team/camis.jpeg';
+import profileAlvaro from './img/team/alvaro.png';
+import profileFabao from './img/team/fabao.jpeg';
+import profileGabriela from './img/team/gabriella.jpeg';
+import profileCarol from './img/team/carol.jpeg';
+import profileLarissa from './img/team/larissa-romano.jpeg';
+import profileStephanie from './img/team/stephanie.jpeg';
+import profileGabiMattos from './img/team/gabi-mattos.jpeg';
+import profileAriane from './img/team/ariane.jpeg';
+import profileNatanael from './img/team/natanael.jpeg';
+import profileMari from './img/team/mariana-goncales.jpeg';
 
 # Time do Animalia Design System
 
@@ -60,6 +70,11 @@ O time do Animalia é multidisciplinar e o processo colaborativo, buscando mante
     title="Front-end Developer"
   />
   <ProfileCardComponent
+    avatar={profileJorge}
+    name="Jorge Nicholas"
+    title="Front-end Developer"
+  />
+  <ProfileCardComponent
     avatar={profileLuiz}
     name="Luiz Mariz"
     title="Front-end Developer"
@@ -68,11 +83,17 @@ O time do Animalia é multidisciplinar e o processo colaborativo, buscando mante
     avatar={profileCaio}
     name="Caio Mendonça"
     title="UX Researcher"
-  /> <ProfileCardComponent
+  />{' '}
+  <ProfileCardComponent
     avatar={profileJe}
     name="Jessica"
     title="UX Researcher"
-  /> <ProfileCardComponent avatar={profileBia} name="Bia Ferrer" title="UX Researcher" />
+  />{' '}
+  <ProfileCardComponent
+    avatar={profileBia}
+    name="Bia Ferrer"
+    title="UX Researcher"
+  />
 </div>
 
 ## Colaboração
@@ -89,8 +110,28 @@ Pessoas que contribuíram ao longo da jornada da criação do Animalia Design Sy
 >
   <img
     style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileGabriela}
+    alt="Gabi Cavagliero"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
     src={profilePeixe}
     alt="Henrique Peixe"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileAriane}
+    alt="Ariane Regina"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileNatanael}
+    alt="Gabi de Mattos"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileGabiMattos}
+    alt="Gabi de Mattos"
   />
   <img
     style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
@@ -111,5 +152,31 @@ Pessoas que contribuíram ao longo da jornada da criação do Animalia Design Sy
     style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
     src={profileVinicius}
     alt="Vinicius"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileMari}
+    alt="Mariana Gonçalves Avila"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileStephanie}
+    alt="Stephanie Martins"
+  />
+
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileCamis}
+    alt="Camila Cruz"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileFabao}
+    alt="Fabio"
+  />
+  <img
+    style={{ width: '64px', borderRadius: '50%', margin: '8px' }}
+    src={profileAlvaro}
+    alt="Alvaro Camillo"
   />
 </div>
