doc(team): Inclusão no time

--- a/docs/about/team.mdx
+++ b/docs/about/team.mdx
@@ -33,12 +33,18 @@ import profileGabiMattos from './img/team/gabi-mattos.jpeg';
 import profileAriane from './img/team/ariane.jpeg';
 import profileNatanael from './img/team/natanael.jpeg';
 import profileMari from './img/team/mariana-goncales.jpeg';
+import profileFernanda from './img/team/fernanda.jpeg';
 
 # Time do Animalia Design System
 
 O time do Animalia é multidisciplinar e o processo colaborativo, buscando manter equilibrados os pilares de design, desenvolvimento e negócios.
 
 <div style={{ display: 'flex', flexFlow: 'row wrap', margin: '-8px' }}>
+  <ProfileCardComponent
+    avatar={profileFernanda}
+    name="Fernanda Russafa"
+    title="Gerente Eng. Corporativa"
+  />
   <ProfileCardComponent
     avatar={profileDoug}
     name="Douglas Souza"
