doc(components): atualização link começando

--- a/docs/components/select.mdx
+++ b/docs/components/select.mdx
@@ -94,8 +94,7 @@ Algumas diretrizes de acessibilidade já são tratadas no componente, internamen
 
 ### Instalação do pacote
 
-Caso você já tenha feito o passo-a-passo descrito em [Começando](?path=/docs/começando--page),
-você pode pular esta instalação e ir direto para o tópico [Como utilizar](#como-utilizar).
+Caso você já tenha feito o passo-a-passo descrito em [Começando](/docs/about/getting-started), você pode pular esta instalação e ir direto para o tópico [Como utilizar](#como-utilizar).
 
 Você pode instalar o componente de forma isolada, conforme o exemplo abaixo:
 
