--- a/docs/components/icon.mdx
+++ b/docs/components/icon.mdx
@@ -76,8 +76,7 @@ O componente foi projetado para atender os requisitos das Diretrizes de Acessibi
 
 ### Instalação do pacote
 
-Caso você já tenha feito o passo-a-passo descrito em [Começando](?path=/docs/começando--page),
-você pode pular esta instalação e ir direto para o tópico [Como utilizar](#como-utilizar).
+Caso você já tenha feito o passo-a-passo descrito em [Começando](/docs/about/getting-started), você pode pular esta instalação e ir direto para o tópico [Como utilizar](#como-utilizar).
 
 Você pode instalar o componente de forma isolada, conforme o exemplo abaixo:
 
