doc(components): correção link para API storybook
Correcão do link para o storybook na aba de desenvolvimento dos componentes

--- a/docs/components/card.mdx
+++ b/docs/components/card.mdx
@@ -184,7 +184,9 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
   react="https://stackblitz.com/edit/react-ani-card?embed=1&file=src/App.js"
 />
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-card--sample).
+:::note API
+Para saber a lista de propriedades e eventos, acesse o [guia de referência de API](http://animaliads.io/?path=/docs/api-card--sample).
+:::
 
 </TabItem>
 
