--- a/docs/components/select.mdx
+++ b/docs/components/select.mdx
@@ -137,7 +137,10 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
   react="https://stackblitz.com/edit/react-ani-select?embed=1&file=src/App.js"
 />
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-select--sample).
+:::note API
+Para saber a lista de propriedades e eventos, acesse o [guia de referência de API](http://animaliads.io/?path=/docs/api-select--sample).
+:::
+
 
 </TabItem>
 
