--- a/docs/components/switch.mdx
+++ b/docs/components/switch.mdx
@@ -196,7 +196,9 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
 
 <LiveDemoComponent react="https://stackblitz.com/edit/react-ani-switch?embed=1&file=src/App.js" />
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-switch--sample).
+:::note API
+Para saber a lista de propriedades e eventos, acesse o [guia de referência de API](http://animaliads.io/?path=/docs/api-switch--sample).
+:::
 
 
 
