--- a/docs/components/button.mdx
+++ b/docs/components/button.mdx
@@ -221,8 +221,9 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
 
 <LiveDemoComponent react="https://stackblitz.com/edit/react-ani-button?embed=1&file=src/App.js" />
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referência de API](/docs/api-button--sample).
-
+:::note API
+Para saber a lista de propriedades e eventos, acesse o [guia de referência de API](http://animaliads.io/?path=/docs/api-button--sample).
+:::
 
 </TabItem>
 
