--- a/docs/components/icon.mdx
+++ b/docs/components/icon.mdx
@@ -116,7 +116,9 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
   react="https://stackblitz.com/edit/react-ani-icon?embed=1&file=src/App.js"
 />
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-icon--sample).
+:::note API
+Para saber a lista de propriedades e eventos, acesse o [guia de referência de API](http://animaliads.io/?path=/docs/api-icon--sample).
+:::
 
 </TabItem>
 
