--- a/docs/components/link.mdx
+++ b/docs/components/link.mdx
@@ -183,8 +183,9 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
   react="https://stackblitz.com/edit/react-ani-link?embed=1&file=src/App.js"
 />
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-link--sample).
-
+:::note API
+Para saber a lista de propriedades e eventos, acesse o [guia de referência de API](http://animaliads.io/?path=/docs/api-link--sample).
+:::
 
 
 </TabItem>
