--- a/docs/components/radio.mdx
+++ b/docs/components/radio.mdx
@@ -178,7 +178,9 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
   react="https://stackblitz.com/edit/react-ani-radio?embed=1&file=src/App.js"
 />
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-radio--sample).
+:::note API
+Para saber a lista de propriedades e eventos, acesse o [guia de referência de API](http://animaliads.io/?path=/docs/api-radio--sample).
+:::
 
 </TabItem>
 
