--- a/docs/components/textarea.mdx
+++ b/docs/components/textarea.mdx
@@ -170,7 +170,9 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
 
 <LiveDemoComponent react="https://stackblitz.com/edit/react-ani-textarea?embed=1&file=src/App.js" />
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-textarea--sample).
+:::note API
+Para saber a lista de propriedades e eventos, acesse o [guia de referência de API](http://animaliads.io/?path=/docs/api-textarea--sample).
+:::
 
 </TabItem>
 
