--- a/docs/components/textfield.mdx
+++ b/docs/components/textfield.mdx
@@ -205,8 +205,9 @@ Para saber quais são as propriedades disponíveis, consulte [propriedades custo
 
 <LiveDemoComponent react="https://stackblitz.com/edit/react-ani-textfield?embed=1&file=src/App.js" />
 
-Para saber a lista de propriedades e eventos, acesse o [guia de referencia de API](/docs/api-textfield--sample).
-
+:::note API
+Para saber a lista de propriedades e eventos, acesse o [guia de referência de API](http://animaliads.io/?path=/docs/api-textfield--sample).
+:::
 
 
 </TabItem>
