doc(team): Inclusão do team

--- a/docs/about/team.mdx
+++ b/docs/about/team.mdx
@@ -16,6 +16,8 @@ import profileGabi from './img/team/gabi.jpeg';
 import profileRafa from './img/team/rafa.jpeg';
 import profileLuiz from './img/team/luiz-mariz.jpeg';
 import profileJorge from './img/team/jorge.png';
+import profileBizon from './img/team/wilson.jpeg';
+import profileMateus from './img/team/mateus.jpeg';
 
 import profilePeixe from './img/team/peixe.jpeg';
 import profileTais from './img/team/tais.jpeg';
@@ -89,17 +91,21 @@ O time do Animalia é multidisciplinar e o processo colaborativo, buscando mante
     avatar={profileCaio}
     name="Caio Mendonça"
     title="UX Researcher"
-  />{' '}
-  <ProfileCardComponent
+  /> <ProfileCardComponent
     avatar={profileJe}
     name="Jessica"
     title="UX Researcher"
-  />{' '}
-  <ProfileCardComponent
+  /> <ProfileCardComponent
     avatar={profileBia}
     name="Bia Ferrer"
     title="UX Researcher"
   />
+  <ProfileCardComponent
+    avatar={profileBizon}
+    name="Wilson Bizon"
+    title="Esp. de Usabilidade"
+  />
+  <ProfileCardComponent avatar={profileMateus} name="Mateus José" title="Product Design" />
 </div>
 
 ## Colaboração
