--- a/docs/designtokens/design-tokens-typo.mdx
+++ b/docs/designtokens/design-tokens-typo.mdx
@@ -15,11 +15,11 @@ sidebar_position: 3
 
 ## Font family
 
-| Token                 | Camada DS | Uso                                                  |
-| --------------------- | --------- | ---------------------------------------------------- |
-| `font-family-heading` | brand     | Títulos e chamadas                                   |
-| `font-family-text`    | brand     | Textos em geral, labels, placeholders, legendas, etc |
-| `font-family-code`    | brand     | Trechos de código em documentação técnica            |
+| Token                 | Camada DS | Uso                                                   |
+| --------------------- | --------- | ----------------------------------------------------- |
+| `font-family-heading` | brand     | Títulos e chamadas                                    |
+| `font-family-text`    | brand     | Textos em geral, labels, placeholders, legendas, etc. |
+| `font-family-code`    | brand     | Trechos de código em documentação técnica             |
 
 ## Font size
 
