UXADS-1485 - Loading: Ajuste no link

--- a/docs/components/loading.mdx
+++ b/docs/components/loading.mdx
@@ -147,10 +147,7 @@ O componente `loading` foi projetado para atender os requisitos das Diretrizes d
 - Ser acessível por leitores de tela, deixando o usuário ciente de que algo está acontecendo em segundo plano;
 - Mesmo na variação `single`, deve ser previsto um texto assistivo para identificar a espera, trazendo um pouco mais de informação para os usuários com leitor de tela;
 - Caso não seja definida nenhuma descrição, o conteúdo do `loading text` pode ser assumido como texto assistivo, neste caso, sem o uso de reticências (`dots`).
-- Permitir a interação via teclado (**2.4.1 – Teclado (A)**);
-- Preservar o foco visível na navegação via teclado (**2.4.7 – Foco Visível (A)**);
-- Utilizar medidas relativas para possibilitar um zoom de até 200% sem perda do conteúdo ou funcionalidade (**1.4.4 – Redimensionar (A)**);
-- Utilizar nome, função e valor adequadamente, pois estes parâmetros são utilizados por tecnologias assistivas para identificar os elementos da interface (**4.1.2 – Nome, Função, Valor (A)**);
+- Utilizar medidas relativas para possibilitar um zoom de até 200% sem perda do conteúdo ou funcionalidade ([**1.4.4 – Redimensionar (A)**](https://www.w3.org/WAI/WCAG21/Understanding/resize-text));
 
 </TabItem>
 
