UXADS-1485 - Loading: Incluído importações

--- a/docs/components/loading.mdx
+++ b/docs/components/loading.mdx
@@ -5,6 +5,8 @@ sidebar_label: Loading
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
+import BestPracticesComponent from './helpers/components/best-practices.tsx';
+import LiveDemoComponent from './helpers/components/live-demo.tsx';
 
 import loadingAnatomy from './img/loading/loading-anatomy.png';
 import loadingOverlayAnatomy from './img/loading/loading-overlay-anatomy.png';
@@ -12,7 +14,6 @@ import loadingSizes from './img/loading/loading-sizes.png';
 import loadingStrokeSize from './img/loading/loading-stroke-size.png';
 import loadingSpinnerAnimation from './img/loading/loading-spinner-animation.png';
 import loadingDotsAnimation from './img/loading/loading-dots-animation.png';
-
 
 # Loading
 
@@ -152,15 +153,20 @@ O componente `loading` foi projetado para atender os requisitos das Diretrizes d
 </TabItem>
 
 <TabItem value="dev">
-  :::note Em construção  
-  Conteúdo em desenvolvimento.
-  :::
+
+:::note Em construção  
+Conteúdo em desenvolvimento
+:::
+
 </TabItem>
 
+
 <TabItem value="custom-properties">
-  :::note Em construção 
-  Conteúdo em desenvolvimento.
-  :::
+
+:::note Em construção 
+Conteúdo em desenvolvimento
+:::
+
 </TabItem>
 
 </Tabs>
